fixed that, also fixed text wrapping in unit conversion container

--- a/src/css/popboy.css
+++ b/src/css/popboy.css
@@ -4,7 +4,7 @@
   position: absolute;
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
   transform: translate(-50%, -50%);
   z-index: 9999999999;
@@ -52,7 +52,17 @@
 }
 
 #ext-unit {
-  margin: 4px 7px;
-  width: fit-content;
+  white-space: nowrap;
+  background-color: rgba(51, 47, 47, 1);
+  display: block;
+  width: 100%;
+  height: 100%;
+  border-radius: 0px 5px 5px 0px;
+  cursor: default;
   font-size: 14px;
+  font-family: Arial;
+  border: none;
+  outline: none;
+  padding: 4px 7px;
+  color: rgba(224, 224, 224, 0.836);
 }
